namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rollo-demo
  labels:
    app.kubernetes.io/part-of: rollo-demos
